Design: make back arrow larger, show underline on feedback link hover

--- a/src/afch.css
+++ b/src/afch.css
@@ -81,6 +81,10 @@
 	font-size: 0.7em;
 }
 
+.afch-feedbackLink:hover {
+	text-decoration: underline;
+}
+
 #afchStatus {
 	list-style-position: inside;
 	text-align: left;
