--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -12,7 +12,8 @@
 		{{#decline}}<a id="afchDecline" class="decline afch-button gradient-button">Decline</a>{{/decline}}
 		{{#comment}}<a id="afchComment" class="comment afch-button gradient-button">Comment</a>{{/comment}}
 		{{#submit}}<a id="afchSubmit" class="submit afch-button gradient-button">Submit</a>{{/submit}}
-		<a id="afchG13" class="g13 afch-button gradient-button {{^g13}}hidden{{/g13}}">Request G13 deletion</a>
+		<a id="afchG13" class="g13 afch-button gradient-button g13-related {{^g13}}hidden{{/g13}}">Request G13 deletion</a>
+		<a id="afchPostponeG13" class="postpone-g13 afch-button gradient-button g13-related {{^g13}}hidden{{/g13}}">Postpone G13</a>
 		<div id="afchExtra" class="afch-button">
 			<div class="extra-wrapper">
 				<div class="extra-open">〈</div>
