Include decline rationale in edit summary; misc decline copyedits

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -192,13 +192,13 @@
 				</optgroup>
 				<optgroup label="Notability">
 					<option value="neo">neo - Submission is about a neologisim that does not meet notability guidelines</option>
-					<option value="web">web - Submission is about web content does not meet notability guidelines</option>
-					<option value="prof">prof - Submission is about a professor does not meet notability guidelines</option>
-					<option value="athlete">athlete - Submission is about an athlete does not meet notability guidelines</option>
-					<option value="music">music - Submission is about a musician or musical work does not meet notability guidelines</option>
-					<option value="film">film - Submission is about a film does not meet notability guidelines</option>
-					<option value="corp">corp - Submission is about a company or organization does not meet notability guidelines</option>
-					<option value="bio">bio - Submission is about a person does not meet notability guidelines</option>
+					<option value="web">web - Submission is about web content that does not meet notability guidelines</option>
+					<option value="prof">prof - Submission is about a professor who does not meet notability guidelines</option>
+					<option value="athlete">athlete - Submission is about an athlete who does not meet notability guidelines</option>
+					<option value="music">music - Submission is about a musician or musical work that does not meet notability guidelines</option>
+					<option value="film">film - Submission is about a film that does not meet notability guidelines</option>
+					<option value="corp">corp - Submission is about a company or organization that does not meet notability guidelines</option>
+					<option value="bio">bio - Submission is about a person who does not meet notability guidelines</option>
 					<option value="nn">nn - Submission does not meet general notability guidelines (be more specific if possible)</option>
 				</optgroup>
 				<optgroup label="Invalid submissions">
