--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -16,7 +16,7 @@
 		<a id="afchPostponeG13" class="postpone-g13 afch-button gradient-button g13-related {{^g13}}hidden{{/g13}}">Postpone G13</a>
 		<div id="afchExtra" class="afch-button">
 			<div class="extra-wrapper">
-				<div class="extra-open">〈</div>
+				<div class="extra-open" title="View additional options">〈</div>
 				<div class="extra-links">
 					<a id="afchClean">Clean submission</a>
 					<a id="afchMark">
