--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -3,7 +3,7 @@
 <!-- main -->
 <div id="afchReviewPanel" class="initial">
 	<div id="afchInitialHeader">
-		<span class="header-script">AFCH v{{version}} / {{versionName}}</span>
+		<span>AFCH v{{version}} / {{versionName}}</span>
 		Reviewing "{{title}}"
 	</div>
 	<div id="afchWarnings" class="hidden"></div>
