--- a/src/afch.css
+++ b/src/afch.css
@@ -17,6 +17,11 @@
 	text-align: right;
 }
 
+.link:hover {
+	cursor: pointer;
+	text-decoration: underline;
+}
+
 /*
 	Reset sizes. This is necessary so the new typography
 	refresh doesn't completely screw up everything.
