Offer a "rationale" field when postponing G13 deletion (becomes a comment on the submission)

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -308,4 +308,20 @@
 </div>
 <!-- /submit -->
 
+<!-- postpone-g13 -->
+<div id="afchReviewPanel" class="postpone-g13">
+	<div id="afchHeader" class="header">Postponing...</div>
+	<div id="afchContent" class="content centered">
+		<textarea id="commentText" class="afch-input afch-textfield afch-textarea"
+			placeholder="Enter your rationale for postponing deletion, which will be added to the submission as a new comment."
+			cols="100" rows="5"></textarea>
+
+		<div id="afchSubmitForm" data-running="Postponing..." class="gradient-button button-centered postpone-g13">
+			Postpone deletion
+		</div>
+
+	</div>
+</div>
+<!-- /postpone-g13 -->
+
 //</nowiki>
