Offer to patrol page when accepting

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -166,6 +166,13 @@
 
 		</div>
 
+		{{#showPatrolOption}}
+		<div id="patrolPageWrapper">
+			<label for="patrolPage" class="afch-label">Mark page as patrolled</label>
+			<input type="checkbox" id="patrolPage" class="afch-input"/>
+		</div>
+		{{/showPatrolOption}}
+
 		<div id="notifyWrapper">
 			<label for="notifyUser" class="afch-label">Notify submitter</label>
 			<input type="checkbox" id="notifyUser" class="afch-input" checked/>
