--- a/src/afch.css
+++ b/src/afch.css
@@ -38,6 +38,9 @@
 	cursor: pointer;
 }
 
+/*
+	Now style constant UI elements.
+ */
 #afchReviewPanel {
 	border-width: 2px;
 	border-style: solid;
@@ -357,7 +360,7 @@ div.afch-code-wrapper > pre {
 
 /* ACCEPT */
 
-.accept {
+#afch .accept {
 	background-color: #2ECC40; /* green */
 	border-color: #2ECC40;
 }
@@ -416,7 +419,7 @@ select#lifeStatus.afch-input {
 
 /* DECLINE */
 
-.decline {
+#afch .decline {
 	background-color: #FF4136; /* red */
 	border-color: #FF4136;
 }
@@ -427,7 +430,7 @@ select#lifeStatus.afch-input {
 
 /* COMMENT */
 
-.comment {
+#afch .comment {
 	background-color: #FFDC00; /* yellow */
 	border-color: #FFDC00;
 }
@@ -439,34 +442,34 @@ select#lifeStatus.afch-input {
 
 /* TAG FOR G13 DELETION */
 
-.g13 {
+#afch .g13 {
 	background-color: #FF851B; /* orange */
 	border-color: #FF851B;
 }
 
 /* POSTPONE G13 */
-.postpone-g13 {
+#afch .postpone-g13 {
 	background-color: #FFDC00; /* yellow */
 	border-color: #FFDC00;
 }
 
 /* SUBMIT */
 
-.submit {
+#afch .submit {
 	background-color: #0074D9; /* blue */
 	border-color: #0074D9;
 }
 
 /* MARK/UNMARK AS UNDER REVIEW */
 
-.mark {
+#afch .mark {
 	background-color: #0074D9; /* blue */
 	border-color: #0074D9;
 }
 
 /* OTHER */
 
-.other-action {
+#afch .other-action {
 	background-color: #FFDC00; /* yellow */
 	border-color: #FFDC00;
 }
