"Recently used" decline reasons! (yay, mw.user.options <3)
Add AFCH.userData as a wrapper around mw.user.options. The main benefit
of using this wrapper is when the page is reloaded using ajax — we use
an intermediate cache which stores values until mw.user.options updates
(on reload). Additionally, handles the API requests to set values
(which is nice ;) ).

As far as the “recently used” menu goes, it shows the three most
recently selected decline reasons as well as the “custom” reason (which
is always displayed).

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -192,9 +192,7 @@
 		<div id="declineReasonWrapper">
 			<select id="declineReason" class="afch-input text-left">
 				<option value=""></option>
-				<optgroup label="Common">
-					<option value="v">v - Submission is improperly sourced</option>
-					<option value="cv">cv - Submission is a copyright violation</option>
+				<optgroup label="Common / recently used">
 					<option value="reason">custom - Enter decline reason in the box below</option>
 				</optgroup>
 				<optgroup label="Notability">
@@ -220,6 +218,8 @@
 					<option value="blp">blp - BLP contains unsourced, possibly defamatory claims (AGF and wait for sources)</option>
 				</optgroup>
 				<optgroup label="Submission content">
+					<option value="cv">cv - Submission is a copyright violation</option>
+					<option value="v">v - Submission is improperly sourced</option>
 					<option value="not">not - Submission fails [[Wikipedia:What Wikipedia is not]]</option>
 					<option value="news">news - Submission appears to be a news story of a single event</option>
 					<option value="dict">dict - Submission is a dictionary definition</option>
