--- a/src/less/general.less
+++ b/src/less/general.less
@@ -32,6 +32,10 @@
 	text-align: right;
 }
 
+.text-smaller {
+	font-size: 0.7em;
+}
+
 .link:hover {
 	cursor: pointer;
 	text-decoration: underline;
