--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -262,9 +262,15 @@
 				<label for="csdSubmission" class="afch-label">Nominate the submission for speedy deletion</label>
 			</div>
 
-			<div id="notifyWrapper" class="afch-option hidden">
-				<input type="checkbox" id="notifyUser" class="afch-input" checked/>
-				<label for="notifyUser" class="afch-label">Notify submitter</label>
+			<div id="notifyWrapper" class="hidden">
+				<div class="afch-option">
+					<input type="checkbox" id="notifyUser" class="afch-input" checked/>
+					<label for="notifyUser" class="afch-label">Notify submitter</label>
+				</div>
+				<div class="afch-option">
+					<input type="checkbox" id="inviteToTeahouse" class="afch-input" checked/>
+					<label for="inviteToTeahouse" class="afch-label">Invite submitter to Teahouse</label>
+				</div>
 			</div>
 		</div>
 
