Stop publicizing internal version name (tooltips are fun, though)

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -3,7 +3,7 @@
 <!-- main -->
 <div class="review-panel initial">
 	<div class="initial-header">
-		<span>AFCH v{{version}} / {{versionName}}</span>
+		<span>AFCH v<span title="{{versionName}}">{{version}}</span></span>
 		Reviewing "{{title}}"
 	</div>
 	<div class="warnings hidden"></div>
