Remove some placeholder fluff

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -247,7 +247,7 @@
 			</div>
 
 			<textarea id="declineTextarea" class="afch-input afch-textfield afch-textarea hidden"
-				placeholder="Elaborate on your decline reason here. Provide additional suggestions to the submitter using wikicode syntax and a clear, supportive tone -- you are the voice of Wikipedia!"
+				placeholder="Elaborate on your decline reason here using wikicode syntax."
 				cols="100" rows="5"></textarea>
 
 			<div id="blankWrapper" class="afch-option hidden">
