--- a/src/less/general.less
+++ b/src/less/general.less
@@ -70,3 +70,65 @@ div.gradient-button, .gradient-button {
 	}
 }
 
+/* Form styling */
+.afch-form {
+	.afch-option {
+		display: block;
+		padding: 5px;
+	}
+
+	.afch-label {
+		padding: 5px;
+	}
+
+	select .afch-input {
+		vertical-align: baseline;
+	}
+
+	.afch-textfield {
+		-webkit-appearance: none;
+		border: 1px solid @lightgray;
+		border-collapse: collapse;
+		box-sizing: border-box;
+		cursor: auto;
+		display: inline-block;
+		font-size: 14px;
+		height: 30px;
+		margin: 0px;
+		padding-left: 5px;
+		vertical-align: middle;
+		width: 25%;
+		min-width: 150px;
+
+		&:focus {
+			border: 1px solid @gray;
+			outline: 0;
+		}
+	}
+
+	.afch-textarea {
+		height: 150px;
+		width: 50%;
+		margin-top: 5px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	label, input {
+		display: inline-block;
+	}
+
+	label {
+		text-align: left;
+		min-width: 200px;
+	}
+
+	label + input[type=text] {
+		width: 30%;
+		min-width: 250px;
+	}
+
+	input + input {
+		float: right;
+	}
+}
