Regressions kill unicorns

--- a/src/less/general.less
+++ b/src/less/general.less
@@ -71,7 +71,7 @@ div.gradient-button, .gradient-button {
 }
 
 /* Form styling */
-.afch-form {
+.afch, .afch-form {
 	.afch-option {
 		display: block;
 		padding: 5px;
@@ -120,7 +120,7 @@ div.gradient-button, .gradient-button {
 
 	label {
 		text-align: left;
-		min-width: 200px;
+		font-size: 0.75em;
 	}
 
 	label + input[type=text] {
@@ -130,5 +130,11 @@ div.gradient-button, .gradient-button {
 
 	input + input {
 		float: right;
+	}
+}
+
+.afch-preferences {
+	label.afch-label {
+		font-size: 1em;
 	}
 }
