--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -58,7 +58,7 @@
 <!-- accept -->
 <div class="review-panel accept">
 	<div class="header">Accepting...</div>
-	<div id="afchContent" class="content afch-form">
+	<div id="afchContent" class="content">
 
 		<div id="newTitleWrapper">
 			<label for="newTitle" class="afch-label">New title</label>
