Prefs: add lines between preferences, don't explode when new prefs added, manually set value of <select> elements based on pref

--- a/src/less/general.less
+++ b/src/less/general.less
@@ -137,4 +137,9 @@ div.gradient-button, .gradient-button {
 	label.afch-label {
 		font-size: 1em;
 	}
+
+	div + div {
+		border-top: 1px dashed gray;
+		padding: 8px 0;
+	}
 }
