Show user agent on preferences screen
This will help with debugging. (“From the main AFCH panel, open your
preferences. Can you tell me what your user-agent is?”)

--- a/src/less/general.less
+++ b/src/less/general.less
@@ -142,4 +142,8 @@ div.gradient-button, .gradient-button {
 		border-top: 1px dashed gray;
 		padding: 8px 0;
 	}
+
+	.details {
+		padding-bottom: 10px;
+	}
 }
