--- a/src/templates/tpl-preferences.html
+++ b/src/templates/tpl-preferences.html
@@ -4,8 +4,8 @@
 <div class="afch afch-form afch-preferences">
 	<div class="details centered">
 		<strong>AFCH v{{version}} / {{versionName}}</strong>
+		<div>User-Agent: {{userAgent}}</div>
 	</div>
-	<hr>
 	<div id="autoOpenWrapper">
 		<label for="autoOpen" class="afch-label">Automatically open the review panel on AfC submissions</label>
 		<input type="checkbox" id="autoOpen" class="afch-input" {{#autoOpen}}checked{{/autoOpen}} />
