Added hover animation with box-shadow

--- a/src/less/submissions.less
+++ b/src/less/submissions.less
@@ -190,6 +190,16 @@
 		text-align: center;
 		padding: 5px;
 		display: table-cell;
+		transition: box-shadow .1s ease-in-out;
+		-webkit-transition: box-shadow .1s ease-in-out;
+	}
+	
+	.afch-button:hover {
+		box-shadow:0 1px rgba(0, 0, 0, .1),inset 0 -3px rgba(0, 0, 0, .2);
+	}
+	
+	.afch-button:active {
+		box-shadow: none;
 	}
 
 	.extra {
