Switch from using the oddly formed chevron to a guillemet
Apparently this thing has a bit more regular spacing, which should
assist in resolving reported UI spacing issues.

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -17,7 +17,7 @@
 		<a id="afchPostponeG13" class="postpone-g13 afch-button gradient-button g13-related {{^g13}}hidden{{/g13}}">Postpone G13</a>
 		<div id="afchExtra" class="extra afch-button">
 			<div class="wrapper">
-				<div class="open" title="View additional options">〈</div>
+				<div class="open" title="View additional options">«</div>
 				<div class="links">
 					<a id="afchClean" class="link">Clean submission</a>
 					<a id="afchMark" class="link">
