--- a/src/less/submissions.less
+++ b/src/less/submissions.less
@@ -195,7 +195,7 @@
 	.extra {
 		background-color: @white;
 		height: 100%;
-		width: 11px;
+		width: 20px;
 		vertical-align: top;
 
 		.wrapper {
@@ -204,6 +204,7 @@
 			.open {
 				position: absolute;
 				height: 100%;
+				font-size: 1.5em;
 				cursor: pointer;
 
 				&:hover {
@@ -213,8 +214,8 @@
 
 			.links {
 				text-align: left;
-				padding-top: 5px;
-				padding-left: 18px;
+				padding-left: 26px;
+				padding-top: 8px;
 
 				a {
 					display: none;
