Changed button font size per request
It was requested on #wikipedia-en that since Helvetica degrades at large font sizes, the font for the buttons should be changed to Arial.

--- a/src/less/submissions.less
+++ b/src/less/submissions.less
@@ -185,6 +185,7 @@
 	.afch-button {
 		vertical-align: middle;
 		line-height: 2em;
+		font-family: arial, sans-serif;
 		font-size: 1.5em;
 		color: @sexyblack;
 		text-align: center;
