--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -312,7 +312,7 @@
 			<option value="self">Yourself</option>
 			<option value="other">Someone else</option>
 		</select>
-		<input id="submitterName" type="text" class="afch-input hidden" placeholder="Username" />
+		<input type="text" id="submitterName" class="afch-input afch-textfield hidden" placeholder="Username" />
 
 		<div id="afchSubmitForm" data-running="Submitting..." class="gradient-button button-centered submit">Submit</div>
 
