--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -316,7 +316,7 @@
 		<div id="submitterNameWrapper" class="hidden">
 			<label for="submitterName" class="afch-label">Other user to submit as</label>
 			<input type="text" id="submitterName" class="afch-input afch-textfield" placeholder="Username" />
-			<div id="submitterNameStatus"></div>
+			<div id="submitterNameStatus" class="error"></div>
 		</div>
 
 		<div id="afchSubmitForm" data-running="Submitting..." class="gradient-button button-centered submit">Submit</div>
