Give the new categories input a constant width, #64

--- a/src/less/submissions.less
+++ b/src/less/submissions.less
@@ -268,7 +268,7 @@
 			(see "Offer dynamic category suggestions" in submissions.js)
 		*/
 		#newCategories_chzn input {
-			width: 110% !important;
+			width: 350px !important;
 		}
 	}
 
