Remind user that the script checks for an invite
I never knew that if the script encountered an existing Teahouse invitation on a user talk page, it wouldn't send another one. Only after looking through the source did I discover that there's no need to uncheck the box. Hence, this quick reminder that there's no need to check the user talk page.

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -268,7 +268,7 @@
 				</div>
 				<div class="afch-option">
 					<input type="checkbox" id="inviteToTeahouse" class="afch-input" checked/>
-					<label for="inviteToTeahouse" class="afch-label">Invite submitter to Teahouse</label>
+					<label for="inviteToTeahouse" class="afch-label">Invite submitter to Teahouse <small>(if they haven't been invited yet)</small></label>
 				</div>
 			</div>
 		</div>
