Disable feedback due to #71

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -4,7 +4,7 @@
 <div class="review-panel initial">
 	<div class="initial-header">
 		<span>AFCH v<span title="{{versionName}}">{{version}}</span>&nbsp;
-		(<span class="feedback-wrapper"></span> | <span class="preferences-wrapper"></span>)</span>
+		(<!-- Disabled due to issue #71 <span class="feedback-wrapper"></span> | --><span class="preferences-wrapper"></span>)</span>
 		Reviewing "{{title}}"
 	</div>
 	<div class="warnings hidden"></div>
