Add previewing of decline reasons
When the (preview) link next to the decline reason dropdown is clicked, a preview of that reason appears.

--- a/src/less/submissions.less
+++ b/src/less/submissions.less
@@ -281,6 +281,22 @@
 		#declineInputWrapper {
 			padding-top: 5px;
 		}
+
+		#declineTextareaPreviewTrigger {
+			font-size: 80%;
+		}
+
+		#declineTextareaPreview {
+			border: thin dotted gray;
+			width: 50%;
+			margin: 0.5em auto;
+			text-align: left;
+			padding: 0 0.5em;
+		}
+
+		#declineTextareaPreview:empty {
+			display: none;
+		}
 	}
 
 	/* COMMENT */
