--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -239,6 +239,8 @@
 					<option value="mergeto">mergeto - Submission should be merged into an existing article</option>
 				</optgroup>
 			</select>
+			<a id="declineTextareaPreviewTrigger" class="link" role="button">(preview)</a>
+			<div id="declineTextareaPreview"></div>
 		</div>
 
 		<div id="declineInputWrapper">
@@ -247,7 +249,7 @@
 				<input id="declineTextfield" type="text" class="afch-input afch-textfield" placeholder="" />
 			</div>
 
-			<textarea id="declineTextarea" class="afch-input afch-textfield afch-textarea hidden"
+			<textarea id="declineTextarea" class="afch-input afch-textfield afch-textarea"
 				placeholder="Elaborate on your decline reason here using wikicode syntax."
 				cols="100" rows="5"></textarea>
 
