--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -194,15 +194,15 @@
 			<select id="declineReason" class="afch-input text-left">
 				<option value=""></option>
 				<optgroup label="Notability">
-					<option value="neo">neo - Submission is about a neologisim that does not meet notability guidelines</option>
-					<option value="web">web - Submission is about web content that does not meet notability guidelines</option>
-					<option value="prof">prof - Submission is about a professor who does not meet notability guidelines</option>
-					<option value="athlete">athlete - Submission is about an athlete who does not meet notability guidelines</option>
-					<option value="music">music - Submission is about a musician or musical work that does not meet notability guidelines</option>
-					<option value="film">film - Submission is about a film that does not meet notability guidelines</option>
-					<option value="corp">corp - Submission is about a company or organization that does not meet notability guidelines</option>
-					<option value="bio">bio - Submission is about a person who does not meet notability guidelines</option>
-					<option value="nn">nn - Submission does not meet general notability guidelines (be more specific if possible)</option>
+					<option value="neo">neo - Submission is about a neologisim not yet shown to meet notability guidelines</option>
+					<option value="web">web - Submission is about web content not yet shown to meet notability guidelines</option>
+					<option value="prof">prof - Submission is about a professor not yet shown to meet notability guidelines</option>
+					<option value="athlete">athlete - Submission is about an athlete not yet shown to meet notability guidelines</option>
+					<option value="music">music - Submission is about a musician or musical work not yet shown to meet notability guidelines</option>
+					<option value="film">film - Submission is about a film not yet shown to meet notability guidelines</option>
+					<option value="corp">corp - Submission is about a company or organization not yet shown to meet notability guidelines</option>
+					<option value="bio">bio - Submission is about a person not yet shown to meet notability guidelines</option>
+					<option value="nn">nn - Submission is about a topic not yet shown to meet general notability guidelines (be more specific if possible)</option>
 				</optgroup>
 				<optgroup label="Invalid submissions">
 					<option value="blank">blank - Submission is blank</option>
