Check for existing WikiProject banners, fix #101

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -90,7 +90,7 @@
 			<label for="newWikiProjects" class="afch-label">Add WikiProjects</label>
 			<select id="newWikiProjects" class="afch-input" multiple>
 				{{#wikiProjects}}
-				<option value="{{templateName}}">{{displayName}}</option>
+				<option value="{{templateName}}" {{#alreadyOnPage}} selected {{/alreadyOnPage}}>{{displayName}}</option>
 				{{/wikiProjects}}
 			</select>
 		</div>
