Add stub sorting feature
https://en.wikipedia.org/w/index.php?title=Wikipedia_talk:WikiProject_Articles_for_creation&oldid=1038847562#Beta_test:_stub_sorting

--- a/src/less/submissions.less
+++ b/src/less/submissions.less
@@ -258,6 +258,14 @@
 			color: @red;
 		}
 
+		#stubSorterContainer {
+			display: inline-block;
+		}
+
+		#stub-sorter-save {
+			display: none;
+		}
+
 		.chzn-container {
 			margin-top: 10px;
 			vertical-align: bottom;
