--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -85,6 +85,11 @@
 			</select>
 		</div>
 
+		<div id="stubSorterWrapper" class="hidden">
+			<label class="afch-label" for="stub-sorter-select">Add stub tag</label>
+			<div id="stubSorterContainer"></div>
+		</div>
+
 		{{#hasWikiProjects}}
 		<div id="wikiProjectWrapper">
 			<label for="newWikiProjects" class="afch-label">Add WikiProjects</label>
