Hide decline button when no reason is selected

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -286,7 +286,7 @@
 					cols="110" rows="3"></textarea>
 			</div>
 
-			<textarea id="declineTextarea" class="afch-input afch-textfield afch-textarea"
+			<textarea id="declineTextarea" class="afch-input afch-textfield afch-textarea hidden"
 				placeholder="Elaborate on your decline reason here using wikicode syntax."
 				cols="100" rows="5"></textarea>
 
@@ -297,7 +297,7 @@
 		</div>
 
 		<div id="rejectInputWrapper" class="hidden">
-			<textarea id="rejectTextarea" class="afch-input afch-textfield afch-textarea"
+			<textarea id="rejectTextarea" class="afch-input afch-textfield afch-textarea hidden"
 				placeholder="Elaborate on your reject reason here using wikicode syntax."
 				cols="100" rows="5"></textarea>
 		</div>
