Typo in decline template: neologisim to neologism

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -207,7 +207,7 @@
 			<select id="declineReason" class="afch-input text-left" multiple="multiple">
 				<option value=""></option>
 				<optgroup label="Notability">
-					<option value="neo">neo - Submission is about a neologisim not yet shown to meet notability guidelines</option>
+					<option value="neo">neo - Submission is about a neologism not yet shown to meet notability guidelines</option>
 					<option value="web">web - Submission is about web content not yet shown to meet notability guidelines</option>
 					<option value="prof">prof - Submission is about a professor not yet shown to meet notability guidelines</option>
 					<option value="athlete">athlete - Submission is about an athlete not yet shown to meet notability guidelines</option>
