Support adding/editing short description

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -85,6 +85,11 @@
 			</select>
 		</div>
 
+		<div id="shortDescriptionWrapper">
+			<label for="shortDescription" class="afch-label">Short description</label>
+			<input type="text" id="shortDescription" class="afch-input afch-textfield" placeholder="British astronomer" value="{{shortDescription}}">
+		</div>
+
 		<div id="stubSorterWrapper" class="hidden">
 			<label class="afch-label" for="stub-sorter-select">Add stub tag</label>
 			<div id="stubSorterContainer"></div>
