Show live preview while writing comments

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -328,6 +328,8 @@
 			placeholder="Enter your comment about the submission using wikicode syntax. Your signature will be added automatically."
 			cols="100" rows="5"></textarea>
 
+		<div id="commentPreview"></div>
+
 	<div class="afch-option">
 		<input type="checkbox" id="notifyUser" class="afch-input" {{#notifyByDefault}}checked{{/notifyByDefault}} />
 		<label for="notifyUser" class="afch-label">Notify submitter</label>
