add comments to talk page

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -120,6 +120,11 @@
 			<input type="checkbox" id="isBiography" class="afch-input"/>
 		</div>
 
+		<div id="copyCommentsWrapper">
+			<label for="copyComments" class="afch-label">Copy comments to talk page</label>
+			<input type="checkbox" id="copyComments" class="afch-input"/>
+		</div>
+
 		<div id="bioOptionsWrapper" class="hidden">
 
 			<div id="subjectNameWrapper">
