Will respect prefs if default on? weird. (#227 and #134)

--- a/src/templates/tpl-preferences.html
+++ b/src/templates/tpl-preferences.html
@@ -23,7 +23,7 @@
 	</div>
 	<div id="logAfcWrapper">
 		<label for="logAfc" class="afch-label">Log acceptances, declines, and rejects</label>
-		<input type="checkbox" id="logAfc" class="afch-input" {{#logAfc}}unchecked{{/logAfc}} />
+		<input type="checkbox" id="logAfc" class="afch-input" {{#logAfc}}checked{{/logAfc}} />
 	</div>
 </div>
 <!-- /preferences -->
