handleSubmit: add "unsubmitted" as an option

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -337,6 +337,7 @@
 			<option value="creator">Page creator</option>
 			<option value="self">Yourself</option>
 			<option value="other">Someone else</option>
+			<option value="unsubmitted">Unsubmitted</option>
 		</select>
 
 		<div id="submitterNameWrapper" class="hidden">
