--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -195,6 +195,7 @@
 					<option value="film">film - Submission is about a film not yet shown to meet notability guidelines</option>
 					<option value="corp">corp - Submission is about a company or organization not yet shown to meet notability guidelines</option>
 					<option value="bio">bio - Submission is about a person not yet shown to meet notability guidelines</option>
+					<option value="event">event - Submission is about an event not yet shown to meet notability guidelines</option>
 					<option value="nn">nn - Submission is about a topic not yet shown to meet general notability guidelines (be more specific if possible)</option>
 				</optgroup>
 				<optgroup label="Invalid submissions">
