delete version from the front end

--- a/src/templates/tpl-preferences.html
+++ b/src/templates/tpl-preferences.html
@@ -3,7 +3,7 @@
 <!-- preferences -->
 <div class="afch afch-form afch-preferences">
 	<div class="details centered">
-		<strong>AFCH v{{version}} / {{versionName}}</strong>
+		<strong>AFCH</strong>
 		<div>User-Agent: {{userAgent}}</div>
 	</div>
 	<div id="autoOpenWrapper">
