--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -3,7 +3,7 @@
 <!-- main -->
 <div class="review-panel initial">
 	<div class="initial-header">
-		<span>AFCH v<span title="{{versionName}}">{{version}}</span>&nbsp;
+		<span>AFCH&nbsp;
 		(<!-- Disabled due to issue #71 <span class="feedback-wrapper"></span> | --><span class="preferences-wrapper"></span>)</span>
 		Reviewing "{{title}}"
 	</div>
