--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -193,6 +193,8 @@
 					<option value="athlete">athlete - Submission is about an athlete not yet shown to meet notability guidelines</option>
 					<option value="music">music - Submission is about a musician or musical work not yet shown to meet notability guidelines</option>
 					<option value="film">film - Submission is about a film not yet shown to meet notability guidelines</option>
+					<option value="book">book - Submission is about a book not yet shown to meet notability guidelines</option>
+					<option value="event">event - Submission is about an event not yet shown to meet notability guidelines</option>
 					<option value="corp">corp - Submission is about a company or organization not yet shown to meet notability guidelines</option>
 					<option value="bio">bio - Submission is about a person not yet shown to meet notability guidelines</option>
 					<option value="nn">nn - Submission is about a topic not yet shown to meet general notability guidelines (be more specific if possible)</option>
