Add noWatch checkbox to preferences
Add checkbox for "Do not add pages to watchlist"

--- a/src/templates/tpl-preferences.html
+++ b/src/templates/tpl-preferences.html
@@ -25,6 +25,10 @@
 		<label for="logAfc" class="afch-label">Log acceptances, declines, and rejects</label>
 		<input type="checkbox" id="logAfc" class="afch-input" {{#logAfc}}checked{{/logAfc}} />
 	</div>
+	<div id="noWatchWrapper">
+		<label for="noWatch" class="afch-label">Do not add pages to watchlist</label>
+		<input type="checkbox" id="noWatch" class="afch-input" {{#noWatch}}checked{{/noWatch}} />
+	</div>
 </div>
 <!-- /preferences -->
 
