--- a/src/less/submissions.less
+++ b/src/less/submissions.less
@@ -70,6 +70,11 @@
 		vertical-align: top;
 	}
 
+	#afchEditConflict {
+		display: none;
+		color: red;
+	}
+
 	#afchSubmitForm {
 		text-align: center;
 		width: 30%;
