--- a/src/templates/tpl-preferences.html
+++ b/src/templates/tpl-preferences.html
@@ -29,6 +29,10 @@
 		<label for="noWatch" class="afch-label">Do not add pages to watchlist</label>
 		<input type="checkbox" id="noWatch" class="afch-input" {{#noWatch}}checked{{/noWatch}} />
 	</div>
+	<div id="autoSubscribeWrapper">
+		<label for="autoSubscribe" class="afch-label"><a href="https://www.mediawiki.org/wiki/Help:DiscussionTools#Topic_subscriptions" target="_blank">Receive a notification</a> whenever a draft author replies to one of your user talk messages</label>
+		<input type="checkbox" id="autoSubscribe" class="afch-input" {{#autoSubscribe}}checked{{/autoSubscribe}} />
+	</div>
 </div>
 <!-- /preferences -->
 
