--- a/src/templates/tpl-preferences.html
+++ b/src/templates/tpl-preferences.html
@@ -34,6 +34,7 @@
 			<a href="https://www.mediawiki.org/wiki/Help:DiscussionTools#Topic_subscriptions" target="_blank">Receive a notification</a> when a draft author replies to a user talk message you left them <input type="checkbox" id="autoSubscribe" class="afch-input" {{#autoSubscribe}}checked{{/autoSubscribe}} />
 		</label>
 	</div>
+	<!-- When adding new preferences, don't forget to update core.js prefDefaults -->
 </div>
 <!-- /preferences -->
 
