--- a/src/templates/tpl-preferences.html
+++ b/src/templates/tpl-preferences.html
@@ -30,9 +30,8 @@
 		<input type="checkbox" id="noWatch" class="afch-input" {{#noWatch}}checked{{/noWatch}} />
 	</div>
 	<div id="autoSubscribeWrapper">
-		<label for="autoSubscribe" class="afch-label">
-			<a href="https://www.mediawiki.org/wiki/Help:DiscussionTools#Topic_subscriptions" target="_blank">Receive a notification</a> when a draft author replies to a user talk message you left them <input type="checkbox" id="autoSubscribe" class="afch-input" {{#autoSubscribe}}checked{{/autoSubscribe}} />
-		</label>
+		<label for="autoSubscribe" class="afch-label"><a href="https://www.mediawiki.org/wiki/Help:DiscussionTools#Topic_subscriptions" target="_blank">Receive a notification</a> when a draft author replies to a user talk message you left them</label>
+		<input type="checkbox" id="autoSubscribe" class="afch-input" {{#autoSubscribe}}checked{{/autoSubscribe}} />
 	</div>
 	<!-- When adding new preferences, don't forget to update core.js prefDefaults -->
 </div>
