check if page is already tagged

--- a/src/less/submissions.less
+++ b/src/less/submissions.less
@@ -87,6 +87,11 @@
 	#afchStatus {
 		list-style-position: inside;
 		text-align: left;
+
+		.error {
+			color: red;
+			font-weight: bold;
+		}
 	}
 
 	.content {
