auto subscribe to user talk messages (#337)
* auto subscribe to user talk messages

- lets the AFC reviewer set a preference to auto subscribe to talk page messages AFCH posts for them
- preference defaults to off
- this is for user talk messages sent via accept, decline, reject, and comment

Fixes #258

* comments

* create preference

* fix padding, fix linter error

* debug

* reduce code duplication

* improve html/css, begin switching to discussiontoolsedit API

* auto subscribe working now, except for an "error" in the status message

* fully working

* fix bug

* fix bug

--- a/src/templates/tpl-preferences.html
+++ b/src/templates/tpl-preferences.html
@@ -29,6 +29,11 @@
 		<label for="noWatch" class="afch-label">Do not add pages to watchlist</label>
 		<input type="checkbox" id="noWatch" class="afch-input" {{#noWatch}}checked{{/noWatch}} />
 	</div>
+	<div id="autoSubscribeWrapper">
+		<label for="autoSubscribe" class="afch-label"><a href="https://www.mediawiki.org/wiki/Help:DiscussionTools#Topic_subscriptions" target="_blank">Receive a notification</a> when a draft author replies to a user talk message you left them</label>
+		<input type="checkbox" id="autoSubscribe" class="afch-input" {{#autoSubscribe}}checked{{/autoSubscribe}} />
+	</div>
+	<!-- When adding new preferences, don't forget to update core.js prefDefaults -->
 </div>
 <!-- /preferences -->
 
