capitalize article assessments such as Start, Stub, etc.
Evad37/rater.js does this. Let's copy this practice, so that rater diffs are smaller.

For example, the conversion of |class=start to |class=Start in this diff could have been avoided if AFCH had just written |class=Start in the first place:

https://en.wikipedia.org/w/index.php?title=Talk:Phare_Circus&diff=next&oldid=1242207529

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -73,15 +73,15 @@
 				<option value="" selected></option>
 				<option value="B">B-class</option>
 				<option value="C">C-class</option>
-				<option value="start">Start-class</option>
-				<option value="stub">Stub-class</option>
-				<option value="list">List-class</option>
-				<option value="disambig">Disambig-class</option>
-				<option value="template">Template-class</option>
-				<option value="redirect">Redirect-class</option>
-				<option value="portal">Portal-class</option>
-				<option value="project">Project-class</option>
-				<option value="na">NA-class</option>
+				<option value="Start">Start-class</option>
+				<option value="Stub">Stub-class</option>
+				<option value="List">List-class</option>
+				<option value="Disambig">Disambig-class</option>
+				<option value="Template">Template-class</option>
+				<option value="Redirect">Redirect-class</option>
+				<option value="Portal">Portal-class</option>
+				<option value="Project">Project-class</option>
+				<option value="NA">NA-class</option>
 			</select>
 		</div>
 
