--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -301,6 +301,10 @@
 				<label for="notifyUser" class="afch-label">Notify submitter</label>
 			</div>
 			<div class="afch-option">
+                               <input type="checkbox" id="sendWelcomeDraft" class="afch-input" checked/>
+                               <label for="sendWelcomeDraft" class="afch-label">Welcome submitter <small>(if they haven't been welcomed yet)</small></label>
+                        </div>
+			<div class="afch-option">
 				<input type="checkbox" id="inviteToTeahouse" class="afch-input" checked/>
 				<label for="inviteToTeahouse" class="afch-label">Invite submitter to Teahouse <small>(if they haven't been invited yet)</small></label>
 			</div>
