Added "ai" decline option to tpl-submissions.html

--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -230,6 +230,7 @@
 					<option value="essay">essay - Submission reads like an essay</option>
 					<option value="npov">npov - Submission is not written in a formal, neutral encyclopedic tone</option>
 					<option value="adv">adv - Submission reads like an advertisement</option>
+					<option value="ai">ai - Submission appears to be a large language model output</option>
 				</optgroup>
 				<optgroup label="Duplicate articles">
 					<option value="exists">exists - Submission is duplicated by another article already in mainspace</option>
