--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -301,8 +301,8 @@
 				<label for="notifyUser" class="afch-label">Notify submitter</label>
 			</div>
 			<div class="afch-option">
-                               <input type="checkbox" id="sendWelcomeDraft" class="afch-input" checked/>
-                               <label for="sendWelcomeDraft" class="afch-label">Welcome submitter <small>(if they haven't been welcomed yet)</small></label>
+                               <input type="checkbox" id="sendWelcome" class="afch-input" checked/>
+                               <label for="sendWelcome" class="afch-label">Welcome submitter <small>(if they haven't been welcomed yet)</small></label>
                         </div>
 			<div class="afch-option">
 				<input type="checkbox" id="inviteToTeahouse" class="afch-input" checked/>
