--- a/src/templates/tpl-submissions.html
+++ b/src/templates/tpl-submissions.html
@@ -141,7 +141,7 @@
 				<label for="lifeStatus" class="afch-label">Is the subject alive?</label>
 				<select id="lifeStatus" class="afch-input">
 					<option value="unknown" selected>Unknown</option>
-					<option value="blp">Living</option>
+					<option value="living">Living</option>
 					<option value="dead">Dead</option>
 				</select>
 			</div>
