Remove grunt-autoprefixer
The only CSS rule requiring vendor-prefixing is user-select: none. It's supported everywhere except for Safari which needs the -webkit- prefix. Added it manually and removed the grunt-autoprefixer dependency. All other CSS being used in the gadget is standard.

--- a/src/less/general.less
+++ b/src/less/general.less
@@ -46,6 +46,7 @@
 div.gradient-button, .gradient-button {
 	cursor: pointer;
 	text-decoration: none;
+	-webkit-user-select: none;
 	user-select: none;
 	transition: box-shadow .1s ease-in-out;
 
@@ -64,6 +65,7 @@ div.gradient-button, .gradient-button {
 	&.disabled {
 		background-color: @lightgray;
 		text-decoration: none;
+		-webkit-user-select: none;
 		user-select: none;
 		cursor: not-allowed;
 
